style.css
@import url('https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Shippori Antique", sans-serif;
}

*::selection {
    background-color: black;
    color: white;
}

header {
    display: flex;
    align-items: center;
    justify-content: center;

    background-color: black;
    color: white;

    min-height: 5vw;
    max-height: 10vw;
}

main {
    
    min-height: 100vh;
    max-height: fit-content;
    
    padding: 10px;
    display: grid;
    justify-content: center;
    gap: 10px;
    grid-auto-rows: 200px;
    grid-template: repeat(auto-fit, 250px) / repeat(auto-fit, 200px);
}

main > button, 
main > div {
    height: 250px;
    width: 200px;
    border: black solid 3px;
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
}

main > button {
    font-size: 60px;
    cursor: pointer;
}

main > div  {
    display: grid;
    padding: 5px;
    grid-template-rows: auto 1fr auto;
    position: relative;
}

main > div > div {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

main > div > div:first-of-type button {
    align-self: flex-start;
    height: 20px;
    width: 20px;
    flex-shrink: 0;
    position: relative;
    background-color: transparent;
}

main > div > div:first-of-type button svg {
    scale: 50%;
    position: absolute;
    left: -2px;
    top: -1px;
    transition: ease-out 0.3s;
}

main > div > div:first-of-type button:hover svg {
    filter: invert();
}

main > div h3 {
    font-size: 1.5em;
}

main > div h4 {
    font-size: 1.1em;
    color: grey;
}

main > div p {
    justify-self: end;
}

.background {
    position: fixed;
    height: 100vh;
    width: 100vw;
    left: 0;
    top: 0;
    background-color: black;
    opacity: 50%;
}

form {
    position: fixed;

    padding: 10px;

    display: grid;
    grid-template-columns: repeat(2, 1fr);

    gap: 10px;
    background-color: white;
    border: black solid 3px;
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;

    top: 50%;
    left: 50%;

    transform: translate(-50%, -50%) scale(1);

    max-width: 600px;
    min-width: 400px;
}

form div {
    position: relative;
    display: flex;
    align-items: center;
}

form > :nth-child(1) {
    grid-column: -2 / -1;
    width: fit-content;
    justify-self: end;
}

form > :nth-child(2) {
    grid-column: 1 / -1;
}

form > :nth-child(3) {
    grid-column: 1 / -1;
}

form > :nth-child(4) {
    grid-column: 1 / 2;

}

form > :nth-child(5) {
    grid-column: 2 / -1;
}

form > :nth-child(6) {
    grid-column: 1 / -1;

}

div:not(:last-of-type) label {
    position: absolute;
    left: 0;
    color: grey;
    background-color: transparent;
    padding: 0px 5px;
    transition: ease-out 0.3s;
    transition-property: top, background-color, color, font-size;
    transition-delay: 0s, 0.3s, 0.3s;
    top: 6px;
    font-size: 0.9em;
    cursor: text;
}

input {
    height: 35px;
    border: black solid 3px;
    outline: none;
    transition: ease-out 0.3s;
    font-size: 1.1em;
    width: 100%;
}

input:focus {
    box-shadow: black 1px 1px, 2px 2px, 3px 3px;
    padding: 10px 0px 0px 10px;
    height: 50px;
}

input:not(:placeholder-shown) {
    height: 50px;
    padding: 10px 0px 0px 10px;
}

input:not(:placeholder-shown) ~ label {
    top: 0px;
    color: white;
    background-color: black;
    font-size: .8em;
}

input:focus ~ label {
    top: 0px;
    background-color: black;
    color: white;
    font-size: .8em;
}

form > button {
    border: black solid 3px;
    padding: 5px 10px;
    cursor: pointer;
}

form > div:last-of-type {
    display: flex;
    justify-content: space-between;
    padding-left: 15px;
    gap: 20px;
    background-color: #cdcdcd;
    white-space: nowrap;
}

.read-style::after,
.not-read-style::after {
    content: '';
    position: absolute;
    display: block;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
    
    background-position: -30px 60px;
    background-repeat: no-repeat;
    opacity: 0.1;
    
    transition: ease-out 0.3s;
}

.read-style::after {
    background-image: url(./SVGs/check-mark.svg);
    background-size: 95%;
}

.not-read-style::after {
    background-image: url(./SVGs/x-mark.svg);
    background-size: 100%;
}

#read-input {
    height: 100%;
    font-size: 1.1em;
    font-weight: 900;
    border: none;
    background-color: #000000;
    color: white;
    padding: 5px 10px;
    cursor: pointer;
    transition: ease-out 0.3s;
}

.read-status {
    position: relative;
    height: 20px;
    width: 40px;
    border: black solid 3px;
    justify-self: end;
    cursor: pointer;
}

.read-status::after {
    height: 15px;
    width: 17px;
}

main > div > div > button {
    color: white;
    background-color: black;
    border: none;
    padding: 5px;
    cursor: pointer;
    transition: ease-out 0.3s;
}

main > div > div > button:hover,
#read-input:hover {
    background-color: #232323;
}

.hover::after {
    opacity: .2;
}

.click::after {
    opacity: .4;
}

footer {
    display: flex;
    justify-content: center;
    padding: 5px;
    background-color: black;
    color: white;
}

